[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/person.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 3 )

[sub_resource type="CircleShape2D" id=2]
radius = 41.6428

[node name="Person" type="KinematicBody2D"]
collision_mask = 3
script = ExtResource( 2 )
SPEED = 100
TEAM = "yellow"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="down1" type="RayCast2D" parent="."]
position = Vector2( -6, 9 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 3

[node name="down2" type="RayCast2D" parent="."]
position = Vector2( 6, 9 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 3

[node name="down3" type="RayCast2D" parent="."]
position = Vector2( 0, 9 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 3

[node name="up1" type="RayCast2D" parent="."]
position = Vector2( 6, 5 )
enabled = true
cast_to = Vector2( 0, -5 )
collision_mask = 3

[node name="up3" type="RayCast2D" parent="."]
position = Vector2( 0, 3 )
enabled = true
cast_to = Vector2( 0, -5 )
collision_mask = 3

[node name="up2" type="RayCast2D" parent="."]
position = Vector2( -6, 3 )
enabled = true
cast_to = Vector2( 0, -5 )
collision_mask = 3

[node name="right1" type="RayCast2D" parent="."]
position = Vector2( 6, 3 )
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 3

[node name="right3" type="RayCast2D" parent="."]
position = Vector2( 6, 6 )
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 3

[node name="right2" type="RayCast2D" parent="."]
position = Vector2( 6, 9 )
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 3

[node name="left1" type="RayCast2D" parent="."]
position = Vector2( -6, 9 )
enabled = true
cast_to = Vector2( -5, 0 )
collision_mask = 3

[node name="left3" type="RayCast2D" parent="."]
position = Vector2( -6, 6 )
enabled = true
cast_to = Vector2( -5, 0 )
collision_mask = 3

[node name="left2" type="RayCast2D" parent="."]
position = Vector2( -6, 3 )
enabled = true
cast_to = Vector2( -5, 0 )
collision_mask = 3

[node name="InfluenceArea" type="Area2D" parent="."]
position = Vector2( -27, -21 )
gravity_point = true
gravity_distance_scale = 47.03
linear_damp = 22.512
angular_damp = 42.414
priority = 6.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InfluenceArea"]
position = Vector2( 27, 27 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
